--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,37 @@
 #root {
-  max-width: 1280px;
+  max-width: 80%;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.control-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-bottom: 10px;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sort-container {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.data-container {
+  height: 300px;
+  overflow: auto;
+  margin-bottom: 40px;
 }
 
-.card {
-  padding: 2em;
+.form-container h3 {
+  text-align: start;
+  margin-bottom: 5px;
 }
 
-.read-the-docs {
-  color: #888;
+.form-container form {
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  gap: 10px;
 }
