--- a/src/design-system/css/components/Input.css
+++ b/src/design-system/css/components/Input.css
@@ -2,7 +2,7 @@ input {
   max-width: 170px;
   padding: 10px;
   font-size: 16px;
-  border: 1px solid #ccc;
+  border: 1px solid var(--colour-grey);
   border-radius: 4px;
   box-sizing: border-box;
 }
