--- a/src/design-system/css/components/Button.css
+++ b/src/design-system/css/components/Button.css
@@ -3,15 +3,15 @@ button {
   font-size: 16px;
   text-align: center;
   font-weight: bold;
-  color: #fff;
-  background-color: #8d4fb4;
+  color: var(--colour-white);
+  background-color: var(--colour-button-bg);
   border: none;
   border-radius: 4px;
   cursor: pointer;
 }
 
 button:hover {
-  background-color: #693a87;
+  background-color: var(--colour-button-hover);
 }
 
 button:focus {
@@ -20,7 +20,7 @@ button:focus {
 }
 
 button:active {
-  background-color: #693a87;
+  background-color: var(--colour-button-active);
 }
 
 button:disabled {
